feat: mock payment checkout, dynamic client UI, and admin image upload
- Implement checkout flow with test card auto-fill and order creation
- Add dynamic hero/navbar based on login state
- Add image upload with preview for product colors
- Connect admin pages to real backend APIs
- Remove placeholder data from payment service